# pet-love-flutter-rust

./: .gitignore  README.md  debug-bottom-nav-build-error.md  flutter_rust_bridge.yaml  generate_bridge.sh
.dbg/: bottom-nav-build-error.env
app/: README.md  pubspec.yaml
app/android/: gradle.properties  settings.gradle.kts
app/android/app/: build.gradle.kts
app/assets/: categories.json
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/ios/Runner/Base.lproj/: LaunchScreen.storyboard
app/lib/: main.dart
app/lib/core/router/: router.dart
app/lib/core/services/: app_message_queue.dart  update_service.dart
app/lib/core/widgets/: app_dialog.dart  shake_widget.dart
app/lib/features/debug/: db_inspector.dart
app/lib/src/rust/: lib.dart  (+3 more)
app/lib/theme/: theme_provider.dart  theme_provider.g.dart
app/macos/Runner.xcodeproj/: project.pbxproj
app/test/: widget_test.dart
core/: Cargo.toml
core/src/: frb_generated.rs  lib.rs
core/src/api/: debug.rs  inventory.rs  mod.rs  pet.rs  system.rs
core/src/api/inventory/: bills.rs  categories.rs  drafts.rs  errors.rs  items.rs  mod.rs  models.rs  stats.rs
core/src/database/: migration.rs  mod.rs
core/src/logger/: mod.rs
core/src/telemetry/: mod.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/cargokit/gradle/: plugin.gradle
rust_builder/ios/: rust_lib_petlove.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_petlove.podspec
rust_builder/ohos/: README.md
rust_builder/windows/: CMakeLists.txt
(+43 files in other folders)
